--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
     --foreground: 213 31% 91%;
     --primary: 268 65% 70%;
     --secondary: 45 100% 70%;
-    --background-light: hsl(222, 47%, 18%);
+    --background-light: hsl(222, 47%, 18%, 0.5);
   }
 
   html {
@@ -302,7 +302,7 @@
   }
 
   .dark .floating-contact-bar {
-    background-color: var(--background-light);
+    background-color: hsl(222, 47%, 18%);
   }
 
   .footer-container {
