--- a/src/index.css
+++ b/src/index.css
@@ -92,16 +92,6 @@
 @layer utilities {
 
   /* animations */
-  @keyframes bounce {
-    0%, 100% {
-      transform: translateX(-50%) translateY(0);
-    }
-
-    50% {
-      transform: translateX(-50%) translateY(-10px);
-    }
-  }
-
   @keyframes fade-in {
     0% {
       opacity: 0;
@@ -111,6 +101,26 @@
     100% {
       opacity: 1;
       transform: translateX(0);
+    }
+  }
+
+  @keyframes arrows {
+    0% {
+      border-left-color: rgba(0, 0, 0, 0);
+      border-bottom-color: rgba(0, 0, 0, 0);
+      transform: translate(calc(var(--arrow-size) / -6), calc(var(--arrow-size) * -4 / 6)) rotate(-45deg);
+    }
+
+    50% {
+      border-left-color: var(--arrow-color);
+      border-bottom-color: var(--arrow-color);
+      transform: translate(calc(var(--arrow-size) / -6), 0px) rotate(-45deg);
+    }
+
+    100% {
+      border-left-color: rgba(0, 0, 0, 0);
+      border-bottom-color: rgba(0, 0, 0, 0);
+      transform: translate(calc(var(--arrow-size) / -6), calc(var(--arrow-size) * 4 / 6)) rotate(-45deg);
     }
   }
 
@@ -181,18 +191,41 @@
 
   /* scroll button */
   .scroll-icon {
-    position: fixed;
+    @apply fixed left-1/2 transform -translate-x-1/2 cursor-pointer z-10;
+    --arrow-size: 15px;
+    --arrow-speed: 3s;
+    --arrow-color: var(--color-accent);
+    width: var(--arrow-size);
+    height: var(--arrow-size);
     bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 24px;
-    color: var(--color-accent);
-    cursor: pointer;
-    animation: bounce 1.5s infinite;
+  }
 
-    &:hover {
-      color: var(--color-text);
+  @media (min-width: 768px) {
+    .scroll-icon {
+      --arrow-size: 20px;
+      bottom: 50px;
     }
+  }
+
+  .scroll-icon .arrows::before,
+  .scroll-icon .arrows::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-left: calc(var(--arrow-size) / 3) solid var(--arrow-color);
+    border-bottom: calc(var(--arrow-size) / 3) solid var(--arrow-color);
+    opacity: 0.7;
+    animation: arrows var(--arrow-speed) linear infinite;
+  }
+
+  .scroll-icon .arrows::before {
+    transform: translate(calc(var(--arrow-size) / 3), calc(var(--arrow-size) * 4 / 3)) rotate(-45deg);
+  }
+
+  .scroll-icon .arrows::after {
+    transform: translate(calc(var(--arrow-size) * 2 / 3), 0px) rotate(-45deg);
+    animation-delay: calc(var(--arrow-speed) / -2);
   }
 
   /* section */
